# settlement-oracle

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  run_demo.sh
data/fixtures/: 17588245.json  17588325.json  17588326.json  17588391.json  17588402.json  17926704.json  18167317.json  18172280.json  18172379.json  18172469.json  18175397.json  18175918.json  18175981.json  18175983.json  18176123.json  18179549.json  18179550.json  18179551.json  18179552.json  18179759.json  18179763.json  18179764.json  18185036.json  18188721.json  _index.json
docs/: app.js  data.js  demo.html  index.html
scripts/: build_web_data.py  capture_results.py
settlement_oracle/: __init__.py  cli.py  contracts.py  engine.py  ledger.py  oracle.py  store.py  types.py  verify.py
settlement_oracle/anchor/: __init__.py  base.py  solana_anchor.py
settlement_oracle/feeds/: __init__.py  txline_results.py
tests/: test_anchor.py  test_anchor_contract.py  test_contracts.py  test_demo.py  test_edge_cases.py  test_engine.py  test_ledger.py  test_real_fixtures.py  test_txline_results.py  test_verify.py
